--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+1.0.0 (09.03.2013)
+ - migrated to xbmcswift2 v2.4.0
+ - updated translations
+ - cosmetics
+
 0.0.2 (25.11.2012)
  - fixed Plugin (add clientID)
  - updated translations
